--- a/Informal Assessment/index.html
+++ b/Informal Assessment/index.html
@@ -29,6 +29,7 @@
     }
 h3{
   text-decoration: underline;
+  text-align: center;
   font-weight: bold;
   font-size: 25px;
   background-color: Chartreuse;
