--- a/Informal Assessment/index.html
+++ b/Informal Assessment/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0" />
     <title>About Me</title>
+    
+    <!-- It would be good if you have used a single .css file to style your elements and link it to your pages-->
     <style>
     h1{
        font-family: georgia, helvetica, sans-serif;
@@ -77,10 +79,12 @@ h3{
 </ul>
 <p>I am much more proficient at drumming and have been apart of many bands where we performed live infront of an audience. I have experience both on stage and backstage as I was a Technical Manager for 3 years at Chauncy School where I ran productions and performances focusing on Stage, Lighting and Sound. My school hosted a yearly event called "Chauncy Rocks" where me and my band played every year.</p>
 <p>Our band was called Hot Shame and you can view our most recent performance below.</p>
+      
+      <!-- You should use with your <video> element at least two different --> 
         <video controls width="100%" poster="img/Poster.png">
           <source src="vid/1396037092.mp4_.mp4" type="video/mp4"/>
           <p>Sorry, your browser does not support the video element. You can download the video <a href="vid/1396037092.mp4_.mp4"> here</a>.</p>
         </video>
 
-
+<!-- I can't see you close body element here --> 
 </html>
